# milko-afs-server

./: .gitignore  COPYING  Makefile.am  Makefile.am.common  Makefile.in  README.md  THANKS  acinclude.m4  aclocal.m4  configure  configure.ac
appl/: Makefile.am  Makefile.in  note.txt
appl/aafs/: Makefile.in  volume.c
appl/aafs-perl/: Makefile.PL.in  Makefile.in
appl/aafs-perl/su/: check-home.pl
appl/aafs-perl/t/: test.pl
appl/afsmgr/: Makefile.in
appl/afstool/: Makefile.am  Makefile.in  afstool.1  afstool.c  at_cachemgr.c  at_cm_localcell.c  at_cm_whoareyou.c  at_fileserver.c  at_fs_flush_cps.c  at_fs_getcap.c  at_fs_gettime.c  at_locl.h  at_mini_cm.c  at_u_debug.c  at_ubik.c
appl/afsutils/: Makefile.am  Makefile.in  aklog.1  aklog.c  klog.c  klog.h  sys.c  tokens.1  tokens.c  unlog.1  unlog.c  up.c
appl/amon/: Makefile.am  Makefile.in  amon.c
appl/arlalib/: Makefile.am  Makefile.in  arla-pioctl.h  arlalib.c  arlalib.h  fs_lib.c  ka-procs.c  ka-procs.h  tokens.c
appl/bos/: Makefile.am  Makefile.in  bos.8  bos.c  bos_addhost.c  bos_adduser.c  bos_getrestart.c  bos_listhosts.c  bos_listusers.c  bos_local.h  bos_removehost.c  bos_restart.c  bos_start.c  bos_status.c  bos_stop.c
appl/fs/: Makefile.am  Makefile.in  fs.1  fs.c  fs_checkservers.c  fs_connect.c  fs_copyacl.c  fs_diskfree.c  fs_examine.c  fs_flush.c  fs_flushvol.c  fs_getcache.c  fs_getcalleraccess.c  fs_getcellstat.c  fs_getfid.c  fs_getprio.c  fs_la.c  fs_listcell.c  fs_listquota.c  fs_local.h  fs_lsm.c  fs_mkm.c  fs_newcell.c  fs_quota.c  fs_rmm.c  fs_setacl.c  fs_setcache.c  fs_setcrypt.c  fs_setquota.c  fs_statistics.c  fs_strerror.c  fs_whereis.c  fs_whichcell.c  fs_wscell.c
appl/kalog/: Makefile.am  Makefile.in  kalog.1  kalog.c
appl/perf/: Makefile.am  Makefile.in  afsfsperf.c
appl/pts/: Makefile.am  Makefile.in  pts.1  pts.c
appl/rxgklog/: Makefile.am  Makefile.in  rxgklog.c
appl/udebug/: Makefile.am  Makefile.in  udebug.1  udebug.in
appl/vos/: Makefile.am  Makefile.in  vos.8  vos.c  vos_addsite.c  vos_backup.c  vos_common.c  vos_createentry.c  vos_createvolume.c  vos_dump.c  vos_endtrans.c  vos_examine.c  vos_listaddrs.c  vos_listpart.c  vos_listvldb.c  vos_listvol.c  vos_local.h  vos_lock.c  vos_partinfo.c  vos_remsite.c  vos_rename.c  vos_status.c  vos_syncsite.c  vos_unlock.c  vos_vldbexamine.c  vos_zap.c
cf/: ChangeLog  Makefile.am.common  aix.m4  arla-canonical.m4  arla-openssl-compat.m4  auth-modules.m4  broken-getaddrinfo.m4  broken-getnameinfo.m4  broken-glob.m4  broken-realloc.m4  broken-snprintf.m4  broken.m4  broken2.m4  bsd-fhtovp.m4  bsd-func-lockmgr.m4  bsd-func-lockstatus.m4  bsd-func-selrecord.m4  bsd-func-suser.m4  bsd-func-vfs-getnewfsid.m4  bsd-header-vnode-if-h.m4  bsd-uvm-only.m4  bsd-vfs-busy.m4  bsd-vfs-object-create.m4  bsd-vget.m4  bsd-vop-lock.m4  c-attribute.m4  c-function.m4  capabilities.m4  check-compile-et.m4  check-declaration.m4  check-dirsiz.m4  check-getpwnam_r-posix.m4  check-glibc.m4  check-kafs.m4  check-kerberos.m4  check-kernel-func.m4  check-kernel-funcs.m4  check-kernel-var.m4  check-kernel-vop-t.m4  check-kernel.m4  (+81 more)
conf/: AliasDB.5  CellServDB.5  DynRootDB  DynRootDB.5  Makefile.in  SuidCells.5  ThisCell.5  bos.conf  check-cellservdb.pl
include/: Makefile.in  afssysdefs.h  bits.c  config.h.in  fs_errors.h  service.h  stds.h
lib/: Makefile.am  Makefile.in
lib/arla/: Makefile.am  Makefile.in  appl_locl.h  arlalib.c  arlalib.h  ka-procs.c
lib/bufdir/: Makefile.am  Makefile.in  afs_dir.h  fbuf.c  fbuf.h  fdir.c  fdir.h  fids.h  test_createutf.c
lib/editline/: Makefile.am  Makefile.in  editline.c  testit.c
lib/ko/: Makefile.am  Makefile.in  afs_uuid.c  afs_uuid.h  afsconf.c  agetarg.c  agetarg.h  ares.c  cellconfig.h  gensysname.c  ko.h  ko_locl.h  kocell.c  koerror.c  kotest.c  misc.c  part.c  part.h  ports.c  ports.h  resnull.c  resolve.c  restest.c  reswinnt.c  slcompat.c  sysnametest.c  uae.c  uae.h  vlmisc.c
lib/roken/: bswap.c  (+144 more)
lib/util/: Makefile.am  Makefile.in  arlamath.c  arlamath.h  bool.h  hash.c  hash.h  heap.c  heap.h  heaptest.c  list.c  list.h  localtime_r.c  log.c  log.h  log_log.3  sha.c  sha.h  sha_hash.h  timeval.c
lib/vers/: Makefile.am  Makefile.in  make-print-version.c  print_version.c  vers.h
lwp/: Makefile.am  Makefile.in  fasttime.c  iomgr.c  lock.c  lock.h  lwp.h  plwp.c  plwp.h  preempt.c  preempt.h  testlwp.c  testrw.c  timer.c
milko/: ChangeLog.milko  Makefile.am  Makefile.in  README.milko
milko/appl/sked/: Makefile.am  Makefile.in  sked.c
milko/bos/: Makefile.am  Makefile.in  bos_locl.h  bosprocs.c  bosserver.c  kconf.c
milko/fs/: Makefile.am  Makefile.in  connsec.c  connsec.h  dump.c  dump.h  fileserver.c  fs_def.h  fsprocs.c  fsrv_locl.h  volprocs.c
milko/pts/: Makefile.am  Makefile.in  pr.c  ptserver.c  ptserver.h
milko/vldb/: Makefile.am  Makefile.in  ubikprocs.c  vl_db.c  vl_disk.c  vldb_locl.h  vldbserver.c  vled.c
rx/: Makefile.am  Makefile.in  rx.c  rx.h  rx_clock.c  rx_clock.h  rx_dumptrace.c  rx_event.c  rx_globs.h  rx_kern.h  rx_locl.h  rx_misc.c  rx_misc.h  rx_multi.c  rx_multi.h  rx_pkt.c  rx_pkt.h  rx_queue.h  rx_rdwr.c  rx_trace.c  rx_trace.h  rx_user.c  rx_user.h  rxdebug.1  rxdebug.c  rxperf.c  test_rx_clock.c
rx/simple.example/: sample_client.c  sample_server.c
rxdef/: Makefile.am  Makefile.in  afsuuid.h  bos.xg  cb.xg  common.h  fs.xg  ka.xg  pts.xg  token.xg  ubik.xg  vldb.xg  volumeserver.xg
rxgk/: Makefile.am  Makefile.in  TODO  keytab  krb5.conf.in  rxgk-service.c  rxgk-settoken.c  rxgk.h  rxgk_clnt.c  rxgk_common.c  rxgk_crpc.c  rxgk_err.h  rxgk_hcrypto.c  rxgk_hcrypto.h  rxgk_info.c  rxgk_locl.h  rxgk_proto.xg  rxgk_rcrypto.c  rxgk_rcrypto.h  rxgk_serv.c  rxgk_srpc.c  rxgk_ticket.c  test.xg  test_client.c  test_gss.in  test_server.c  test_ticket.c
rxkad/: Makefile.am  Makefile.in  decomp_ticket.c  krb4-protos.h  krb4.h  lifetime.c  osi_alloc.c  rw.c  rxk_clnt.c  rxk_crpt.c  rxk_info.c  rxk_locl.c  rxk_serv.c  rxkad.h  rxkad_locl.h
ydr/: Makefile.am  Makefile.in  lex.h  lex.l  main.c  output.c  output.h  parse.y  sym.h  symbol.c  types.c  types.h
(+65 files in other folders)
